--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>طلب الضيافة</title>
-
 <script src="https://cdn.tailwindcss.com"></script>
-
 <style>
   .active {
     background-color: #ea580c !important;
@@ -45,11 +43,72 @@
 
 <textarea id="notes" class="w-full p-3 rounded text-black mb-4" placeholder="ملاحظات"></textarea>
 
-<button id="send"
- class="w-full bg-orange-600 py-3 rounded text-lg font-bold">
-إرسال الطلب
+<button id="send" class="w-full bg-orange-600 py-3 rounded text-lg font-bold">
+  إرسال الطلب
 </button>
 
-<script src="app.js"></script>
+<script>
+let selectedDrink = "";
+let sugar = "";
+let milk = "";
+
+// اختيار مشروب
+document.querySelectorAll(".drink").forEach(btn => {
+  btn.onclick = () => {
+    document.querySelectorAll(".drink").forEach(b => b.classList.remove("active"));
+    btn.classList.add("active");
+    selectedDrink = btn.dataset.drink;
+  };
+});
+
+// السكر
+document.querySelectorAll(".sugar").forEach(btn => {
+  btn.onclick = () => {
+    document.querySelectorAll(".sugar").forEach(b => b.classList.remove("active"));
+    btn.classList.add("active");
+    sugar = btn.dataset.value;
+  };
+});
+
+// الحليب
+document.querySelectorAll(".milk").forEach(btn => {
+  btn.onclick = () => {
+    document.querySelectorAll(".milk").forEach(b => b.classList.remove("active"));
+    btn.classList.add("active");
+    milk = btn.dataset.value;
+  };
+});
+
+// إرسال الطلب
+document.getElementById("send").onclick = () => {
+  if (!selectedDrink) {
+    alert("اختاري المشروب");
+    return;
+  }
+
+  const orders = JSON.parse(localStorage.getItem("orders") || "[]");
+
+  orders.push({
+    drink: selectedDrink,
+    sugar,
+    milk,
+    notes: document.getElementById("notes").value,
+    time: new Date().toLocaleTimeString(),
+    status: "جديد"
+  });
+
+  localStorage.setItem("orders", JSON.stringify(orders));
+
+  alert("✅ تم إرسال الطلب");
+
+  // إعادة تعيين الفورم بدون إعادة تحميل الصفحة
+  selectedDrink = "";
+  sugar = "";
+  milk = "";
+  document.getElementById("notes").value = "";
+  document.querySelectorAll(".drink, .sugar, .milk").forEach(b => b.classList.remove("active"));
+};
+</script>
+
 </body>
 </html>
